c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_decl_and_use_self_reference.c
/* It's illegal to use a 'union s' type when a 'struct s' type is in scope ,
 * or vice versa.
 */

int main(void) {
    struct s;
    {
        union s* ptr;
    }
    return 0;
}